<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.madara.parkino.RegisterScreen">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:src="@drawable/white_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <EditText
                    android:fontFamily="@font/roboto"
                    android:id="@+id/et_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/whiteColor"
                    android:textSize="20sp" />

                <EditText
                    android:fontFamily="@font/roboto"
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/whiteColor"
                    android:textSize="20sp" />

                <EditText
                    android:fontFamily="@font/roboto"
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/whiteColor"
                    android:textSize="20sp" />

                <EditText
                    android:fontFamily="@font/roboto"
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/whiteColor"
                    android:textSize="20sp" />

                <EditText
                    android:fontFamily="@font/roboto"
                    android:id="@+id/et_register_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/whiteColor"
                    android:textSize="20sp" />

                <Button
                    android:fontFamily="@font/roboto"
                    android:id="@+id/btn_register"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/credential_button"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

                <TextView
                    android:fontFamily="@font/roboto"
                    android:id="@+id/tv_register_gotologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/already_a_member_login"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </TableLayout>
</ScrollView>
