<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context="com.example.madara.parkino.UserProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">
        <LinearLayout
            android:background="@drawable/profilegradientbackground"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:src="@drawable/default_profile_image"/>

            <TextView
                android:id="@+id/txt_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                tools:text="Wiliam Snoe"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/points"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/txt_profile_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        tools:text="125"
                        android:textColor="@color/startBlue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cards"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/txt_profile_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1205"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/startBlue"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/garages"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/txt_profile_garages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="360"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/startBlue"/>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/startBlue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <TextView
                android:id="@+id/txt_profile_useremail"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                tools:text="Wiliam@gmail.com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/startBlue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_android_black_24dp"/>
            <TextView
                android:id="@+id/txt_profile_userphone"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                tools:text="+266 225 225"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_profile_settings"
        android:background="@color/endtBlue"
        android:textColor="#fff"
        android:width="120dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/settings"/>

</LinearLayout>
